force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/CSBD_IdentificarOppsPHDSetting__c.object-meta.xml
<CustomObject>
    <customSettingsType>Hierarchy</customSettingsType>
    <description>Utilizado para el WS consumido desde puntos de servicio y/o plataformas hipotecarias para identificar si existen Leads (Oportunidades)</description>
    <label>CSBD Identificar Opp desde PHD</label>
</CustomObject>