force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_CanalesProcedencia__c.field-meta.xml
<CustomField>
    <fullName>CSBD_CanalesProcedencia__c</fullName>
    <description>Canales de Procedencia a los que aplicará la identificación de oportunidades duplicadas. (Se utilizará en la condición del WHERE de la query)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Canales de Procedencia a los que aplicará la identificación de oportunidades duplicadas. (Se utilizará en la condición del WHERE de la query)</inlineHelpText>
    <label>Canales de Procedencia</label>
    <type>TextArea</type>
</CustomField>