force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_Dias__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Dias__c</fullName>
    <defaultValue>90</defaultValue>
    <description>Utilizado para filtrar las oportunidades que hayan sido modificadas en los último X días.</description>
    <inlineHelpText>Utilizado para filtrar las oportunidades que hayan sido modificadas en los último X días.</inlineHelpText>
    <label>Cantidad de días</label>
    <precision>3</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>