force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_EnvioCorreo__c.field-meta.xml
<CustomField>
    <fullName>CSBD_EnvioCorreo__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Utilizado para enviar correo al owner, manager y director de la oportunidad identificada.</description>
    <inlineHelpText>Utilizado para enviar correo al owner, manager y director de la oportunidad identificada.</inlineHelpText>
    <label>Enviar correo automático</label>
    <type>Checkbox</type>
</CustomField>