force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_FrecuenciaAvisosAuto__c.field-meta.xml
<CustomField>
    <fullName>CSBD_FrecuenciaAvisosAuto__c</fullName>
    <defaultValue>15</defaultValue>
    <description>Frecuencia en minutos de los avisos automáticos (vacío o &quot;0&quot;: avisos desactivados)</description>
    <inlineHelpText>Frecuencia en minutos de los avisos automáticos (vacío o &quot;0&quot;: avisos desactivados)</inlineHelpText>
    <label>Frecuencia avisos automaticos (min)</label>
    <precision>2</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>