force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_Origen__c.field-meta.xml
<CustomField>
    <fullName>CSBD_Origen__c</fullName>
    <description>Orígenes a los cuáles se aplicará la búsqueda de oportunidades duplicadas. (Se utilizará en la condición del WHERE)</description>
    <encryptionScheme>None</encryptionScheme>
    <inlineHelpText>Orígenes a los cuáles se aplicará la búsqueda de oportunidades duplicadas. (Se utilizará en la condición del WHERE)</inlineHelpText>
    <label>Origenes</label>
    <type>TextArea</type>
</CustomField>