force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_PlantillaCorreoFacilitea__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PlantillaCorreoFacilitea__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Correo Facilitea</label>
    <length>250</length>
    <type>Text</type>
</CustomField>