force-app/main/default/objects/CSBD_IdentificarOppsPHDSetting__c/fields/CSBD_PlantillaCorreoPHD__c.field-meta.xml
<CustomField>
    <fullName>CSBD_PlantillaCorreoPHD__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Plantilla Correo PHD</label>
    <length>250</length>
    <type>Text</type>
</CustomField>